[project]
name = "review-queue"
version = "0.1.0"
description = "Human-gated promotion workflow for AI-generated candidates"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ReviewQueue contributors" }]
dependencies = []

[project.scripts]
review-queue = "review_queue.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["review_queue"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
